CHANGES IN VERSION 0.99.6
------------------------
 o now read.beast support characters in support values <2015-01-18, Sun>
 o add example of gzoom and groupOTU in vignette <2015-01-14, Wed> 
 o implement groupOTU methods <2015-01-14, Wed>
 o export get.offspring.tip <2015-01-14, Wed>

CHANGES IN VERSION 0.99.5
------------------------
 o move ape and ggplot2 from Depends to Imports <2015-01-12, Mon>
 o get.tipseq method for paml_rst and codeml object <2015-01-08, Thu>
 o add gzoom function, similar to zoom function in ape <2015-01-07, Wed>
 o add examples in man pages of %<% and %<+% operators <2015-01-06, Tue>
 o remove <<- and update vignette <2015-01-06, Tue>
 o update vignette and use BibTex and CSL for references <2015-01-05, Mon>  
 o update cladogram layout <2015-01-05, Mon>
 o read.baseml function and update vignette with baseml example <2015-01-04, Sun>
 o plot method for hyphy and hyphy example in vignette <2015-01-04, Sun>
 o merge all vignettes to ggtree vignette <2015-01-04, Sun>

CHANGES IN VERSION 0.99.4
------------------------
 o ggtree now support branch.length = "none" to only draw tree topology <2015-01-03, Sat> 
 o get.subs method for hyphy object <2015-01-03, Sat>
 o show, get.tree and get.subs methods of hyphy <2015-01-02, Fri> 
 o export read.hyphy <2015-01-02, Fri>
 o export hyphy class <2015-01-01, Thu>
 o plot method for beast class and get.tree method for codeml class <2014-12-31, Wed>
 o show, get.fields, get.subs and plot methods for codeml class <2014-12-30, Tue>
 o plot method for paml_rst class <2014-12-30, Tue>
 o get.subs, method for paml_rst class <2014-12-30, Tue>
 o show, plot, get.tree and fority methods for codeml_mlc class <2014-12-29, Mon>
 o codeml class <2014-12-29, Mon>
 o hyphy class and read.hyphy prototype <2014-12-27, Sat>
 o update man file and add example file of beast output <2014-12-26, Fri>
 o get.tree and get.fileds methods of beast class <2014-12-26, Fri>
 o read.beast <2014-12-26, Fri>